--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "langchain>=1.2.0",
     "langchain-openai>=0.3.0",
     "langchain-anthropic>=0.3.0",
+    "langchain-groq>=0.1.0",
     "langchain-core>=0.3.0",
     "langgraph>=0.4.0",
     "pydantic>=2.0.0",
